fix arrow overwrap and move button to list events

--- a/src/style.css
+++ b/src/style.css
@@ -147,13 +147,20 @@
 
 .articles-wrapper {
 
-  @media(min-width: 992px) {
-    display: flex;
+  @media (min-width: 992px) {
     flex: 1;
-    flex-wrap: wrap;
     padding-left: 40px;
     margin-left: -15px;
     margin-right: -15px;
+  }
+
+  &__inner {
+    margin-bottom: -40px;
+
+    @media (min-width: 992px) {
+      display: flex;
+      flex-wrap: wrap;
+    }
   }
 }
 
@@ -187,7 +194,7 @@
   }
 
   &__title {
-    width: 0;
+    min-width: 1px;
     flex: 1;
     font-size: calc(var(--ui-heading-size) * 0.8334);
   }
